--- a/src/index.html
+++ b/src/index.html
@@ -21,9 +21,24 @@
                     Social media
                 </h2>
                 <ul>
-                    <li><a href="https://github.com/<handle>">@github_handle</a></li>
-                    <li><a href="https://linkedin.com/in/<handle>">@linkedin_handle</a></li>
-                    <li><a href="https://twitter.com/<handle>">@twitter_handle</a></li>
+                    <li>
+                        <a href="https://github.com/<handle>">
+                            <i class="fab fa-github"></i>
+                            @github_handle
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://linkedin.com/in/<handle>">
+                            <i class="fab fa-linkedin-in"></i>
+                            @linkedin_handle
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://twitter.com/<handle>">
+                            <i class="fab fa-twitter"></i>
+                            @twitter_handle
+                        </a>
+                    </li>
                 </ul>    
             </section>
             
