--- a/src/index.html
+++ b/src/index.html
@@ -21,21 +21,18 @@
                     Social media
                 </h2>
                 <ul>
-                    <li>
+                    <li> GitHub: 
                         <a href="https://github.com/<handle>">
-                            <i class="fab fa-github"></i>
                             @github_handle
                         </a>
                     </li>
-                    <li>
+                    <li> LinkedIn: 
                         <a href="https://linkedin.com/in/<handle>">
-                            <i class="fab fa-linkedin-in"></i>
                             @linkedin_handle
                         </a>
                     </li>
-                    <li>
+                    <li> Twitter: 
                         <a href="https://twitter.com/<handle>">
-                            <i class="fab fa-twitter"></i>
                             @twitter_handle
                         </a>
                     </li>
